--- a/nfts-4-nature/app/globals.css
+++ b/nfts-4-nature/app/globals.css
@@ -123,6 +123,18 @@ html, body, #root{
   height: 45%;
 }
 
+.mint-hdr{
+  width: 100%;
+  height: 60%;
+  align-items: flex-start;
+}
+
+.mint-hdr > img{
+  width: 10%;
+  height:80%;
+  object-fit: contain;
+}
+
 .profile-hdr > img{
   width: 15%;
   height:100%;
@@ -240,6 +252,16 @@ html, body, #root{
   width: 768px;
   height: 354px;
   object-fit: contain;
+}
+
+.image{
+  width: 100%;
+  height:80%;
+  object-fit: contain;
+}
+
+.full-height{
+  height: 100%;
 }
 
 @keyframes App-logo-spin {
