--- a/nfts-4-nature/app/globals.css
+++ b/nfts-4-nature/app/globals.css
@@ -74,6 +74,7 @@ html, body, #root{
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .column-cont{
@@ -219,7 +220,7 @@ html, body, #root{
 }
 
 .hex_button{
-  height: 11%;
+  height: 20%;
   width: 11%;
   border-style: solid;
   border-width: 0.25px;
@@ -254,6 +255,12 @@ html, body, #root{
   object-fit: contain;
 }
 
+.sneak-peak > video{
+  width: 768px;
+  height: 354px;
+  object-fit: contain;
+}
+
 .image{
   width: 100%;
   height:80%;
@@ -264,11 +271,31 @@ html, body, #root{
   height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .sneak-peak{
+    width: 100%;
+    height: 40%;
+    margin-top: 5%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .sneak-peak > img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .sneak-peak > video{
+    width: 768px;
+    height: 354px;
+    object-fit: contain;
+  }  
+
+  .park_container{
+    width: 420px;
+    height: 360px;
+  }
+
+  .park_container > .button_container{
+    width: 420px;
+    height: 360px;
   }
 }
