--- a/nfts-4-nature/app/globals.css
+++ b/nfts-4-nature/app/globals.css
@@ -22,7 +22,7 @@ html, body, #root{
 }
 
 .main-cont{
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   background-image: linear-gradient(rgb(252, 142, 158), rgb(252, 252, 198));
 }
@@ -149,6 +149,7 @@ html, body, #root{
 }
 
 .hdr-img > img{
+  width: 100%;
   height: 50%;
   object-fit: contain;
 }
@@ -196,7 +197,7 @@ html, body, #root{
 
 .park_container{
   width: 1000px;
-  height: 570px;
+  height: 520px;
 }
 
 .park_image{
@@ -209,7 +210,7 @@ html, body, #root{
 
 .button_container{
   width: 1000px;
-  height: 570px;
+  height: 420px;
   position: absolute;
   display: flex;
   flex-direction: row;
@@ -220,7 +221,7 @@ html, body, #root{
 }
 
 .hex_button{
-  height: 20%;
+  height: 23%;
   width: 11%;
   border-style: solid;
   border-width: 0.25px;
@@ -241,7 +242,8 @@ html, body, #root{
 }
 
 .active:hover{
-  background-color: red;
+  background-color: rgb(172, 248, 172);
+  border-radius: 20px;
 }
 
 .sneak-peak{
@@ -269,6 +271,11 @@ html, body, #root{
 
 .full-height{
   height: 100%;
+}
+
+.map-title{
+  text-align: center;
+  padding: 3%;
 }
 
 @media screen and (max-width: 600px) {
