--- a/nfts-4-nature/app/globals.css
+++ b/nfts-4-nature/app/globals.css
@@ -1,72 +1,46 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+* {
   margin: 0;
   padding: 0;
- }
+}
  
- button{
-  background: none;
-  border: none;
-  outline: none;
-  box-shadow: none;
- }
-
- button:hover{
-  cursor: pointer;
- }
-
-html, body, #root{
+ html, body, #root{
   height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
+  font-size: 16px;
+  color: #f6eac8;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+button{
+  background: none;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+button:hover{
+  cursor: pointer;
 }
 
 .main-cont{
   min-height: 100%;
   width: 100%;
-  background-image: linear-gradient(rgb(252, 142, 158), rgb(252, 252, 198));
-}
-
-.image-button{
-  object-fit: contain;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.image-button:hover{
-  cursor: pointer;
-}
-
-.image-button > img{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  background-color: #030404;
+  overflow-y: auto;
 }
 
 .square-button{
-  display: block;
-  background-color: rgb(53, 0, 139);
+  background-color: #222224;
   color: #f7efac;
   padding: 15px;
   min-width: 260px;
   min-height: 60px;
   font-size: 1.1rem;
   border-radius: 8px;
-
-}
-
-.log-in-container{
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-  background-image: url("/images/LogIn_Background.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: right;
 }
 
 .row-cont{
@@ -90,219 +64,72 @@ html, body, #root{
   justify-content: space-around;
 }
 
-.log-in-title{
-  height: 14%;
-  width: 100%;
+.title{
+  font-style: normal;
 }
 
-.log-in-title > img{
-  width: 20%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.login-image{
-  width: 100%;
-  height: 30%;
-}
-
-.login-image > img{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.buttons-cont{
-  margin-top: 5%;
-  width: 100%;
+.about-header{
+  width: 90%;
   height: 15%;
-  gap: 5%;
+  justify-content: flex-start;
+  padding-left: 10%;
 }
 
-.profile-hdr{
-  width: 100%;
-  height: 45%;
-}
-
-.mint-hdr{
-  width: 100%;
-  height: 60%;
-  align-items: flex-start;
-}
-
-.mint-hdr > img{
-  width: 10%;
-  height:80%;
-  object-fit: contain;
-}
-
-.profile-hdr > img{
+.about-header > img{
   width: 15%;
-  height:100%;
-  object-fit: contain;
-}
-
-.hdr-img{
-  justify-content: space-around;
   height: 100%;
-  width: 60%;
-}
-
-.hdr-img > img{
-  width: 100%;
-  height: 50%;
+  margin-right: 3%;
   object-fit: contain;
 }
 
-.profile-buttons{
-  height: 45%;
+.about-info{
   width: 100%;
-}
-
-.profile-buttons > .row-cont{
-  height: 50%;
-  width: 100%;
-  justify-content: space-around;
-}
-
-.profile-buttons > .row-cont > .image-button{
-  height: 100%;
-  width: 35%;
-}
-
-
-.mint-nft{
-  background-color: gray;
-  height: 96%;
-  width: 96%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 2%;
-}
-
-.nft-image-cont{
-  width: 100%;
-  background-color: red;
-  object-fit: contain;
-  margin-top: 5%;
-}
-
-.nft-image-cont > img{
-  width: 20%;
   height: auto;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
-}
-
-.park_container{
-  width: 1000px;
-  height: 520px;
-}
-
-.park_image{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  max-width: 1208px;
-  max-height: 770px;
-}
-
-.button_container{
-  width: 1000px;
-  height: 420px;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: flex-start;
-  z-index: 1;
-  flex-wrap: wrap;
 }
 
-.hex_button{
-  height: 23%;
-  width: 11%;
-  border-style: solid;
-  border-width: 0.25px;
-  opacity: 0.5;
-  border-color: rgb(0,0,0,0);
-}
-
-.half-heigh{
-  height: 6%;
-}
-
-.smaller{
-  width: 8%;
-}
-
-.bigger{
-  width: 12%;
-}
-
-.active:hover{
-  background-color: rgb(172, 248, 172);
-  border-radius: 20px;
-}
-
-.sneak-peak{
-  width: 40%;
-  height: 60%;
-}
-
-.sneak-peak > img{
-  width: 768px;
-  height: 354px;
+.about-info > img{
+  width: 30%;
+  height: 40%;
   object-fit: contain;
 }
 
-.sneak-peak > video{
-  width: 768px;
-  height: 354px;
-  object-fit: contain;
-}
-
-.image{
-  width: 100%;
-  height:80%;
-  object-fit: contain;
-}
-
-.full-height{
-  height: 100%;
-}
-
-.map-title{
+.about-info > .pagraph{
+  width: 50%;
+  min-width: 500px;
+  height: auto;
   text-align: center;
-  padding: 3%;
+  margin-bottom: 3%;
 }
 
-@media screen and (max-width: 600px) {
-  .sneak-peak{
-    width: 100%;
-    height: 40%;
-    margin-top: 5%;
-  }
+.pagraph > p{
+  text-align: left;
+}
 
-  .sneak-peak > img{
-    width: 100%;
-    height: 100%;
-  }
+.gallery-header{
+  width: 100%;
+  height: 10%;
+}
 
-  .sneak-peak > video{
-    width: 768px;
-    height: 354px;
-    object-fit: contain;
-  }  
+.gallery-header > img{
+  width: 10%;
+  height: 100%;
+  margin: 0% 3%;
+}
 
-  .park_container{
-    width: 420px;
-    height: 360px;
-  }
+.gallery-body{
+  width: 100%;
+  height: 80%;
+  overflow-y: auto;
+}
 
-  .park_container > .button_container{
-    width: 420px;
-    height: 360px;
-  }
+.image-button{
+  width: 33%;
+  max-height: 150px;
+  object-fit: contain;
+  margin-bottom: 5%;
+}
+
+.hover:hover{
+  cursor: pointer;
 }
